# CSSLoader-Desktop

./: README.md  ThemeTypes.ts  backend.ts  constants.ts  latest.json  next.config.js  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: beta-release.yml  debug-release.yml  nightly-release.yml  release.yml
backend/: index.ts  recursiveCheck.ts  toast.ts  wrappedInvoke.ts
backend/backendHelpers/: changePreset.ts  deletePreset.ts  index.ts  toggleTheme.ts
backend/pythonMethods/: checkIfBackendIfStandalone.ts  deleteTheme.ts  downloadThemeFromUrl.ts  dummyFunction.ts  fetchThemePath.ts  generatePreset.ts  generatePresetFromThemeNames.ts  getBackendVersion.ts  getInstalledThemes.ts  getLastLoadErrors.ts  index.ts  reloadBackend.ts  server.ts  setComponentOfThemePatch.ts  setPatchOfTheme.ts  setThemeState.ts  storeRead.ts  storeWrite.ts
backend/tauriMethods/: copyBackend.ts  (+11 more)
components/: AppRoot.tsx  BackendFailedPage.tsx  CreatePresetModal.tsx  DownloadBackendPage.tsx  GenericInstallBackendModal.tsx  OnboardingPage.tsx  PatchComponent.tsx  ThemePatch.tsx  ThemeToggle.tsx  index.ts
contexts/: FontContext.tsx  backendStatusContext.ts  backendStatusContext.tsx  osContext.ts  themeContext.ts
hooks/: index.ts  useBasicAsyncEffect.ts  useInterval.ts  usePlatform.ts  useVW.ts
logic/: bulkThemeUpdateCheck.ts  index.ts
pages/: _app.tsx  index.tsx  manage-themes.tsx  settings.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
styles/: globals.css
(+40 files in other folders)
